--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap&subset=cyrillic,cyrillic-ext');
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+}
+body, p, h1, h2, h3, h4, h5, h6 {
+    background: transparent;
+    outline: 0;
+    padding: 0;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
 }
 
 .main {
@@ -32,7 +41,7 @@
 
 .nav li a{
     color: white;
-    text-decorationcolor: white;: none;
+    text-decoration:none;
 }
 
 .whitetext {
@@ -94,9 +103,166 @@
     width: 15%;
 }
 
-.chosefilms {
-    padding-top: 635px;
+.movie-list {
     text-align: center;
+}
+
+.movie-list__header {
+    font-size: 50px;
+    color: #252525;
+    font-weight: 700;
+    margin:626px 0 76px;
+    text-align: center;
+}
+
+.container {
+    max-width: 1030px;
+    margin-left: 247px;
+}
+
+.movie-list__table {
+    width: 1030px;
+    border-collapse: collapse;
+    border-radius: 15px;
+    overflow: hidden;
+    table-layout: fixed;
+}
+
+.movie-list__thead {
+    font-size: 30px;
+    font-weight: 700;
+    color: #fff;
+    background: #a3cc40;
+
+}
+
+.time_head {
+    width: 225px;
+    text-align: center;
+    height: 75px;
+    position: relative;
+}
+
+.time_head a {
+    color: white;
+    text-decoration:none;
+}
+
+.time_head:before {
+    position: absolute;
+    left: 99%;
+    top: 60%;
+    margin-top: -12px;
+    content: ' ';
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 7.5px 14.4px 7.5px;
+    border-color: transparent transparent #ffffff transparent;
+}
+.stuff_head {
+    padding-left: 65px;
+    text-align: center;
+    width: 337px;
+    height: 75px;
+    position: relative;
+    color: white;
+    text-decoration:none;
+}
+
+.stuff_head a {
+    color: white;
+    text-decoration:none;
+}
+
+.stuff_head:before {
+    position: absolute;
+    left: 98%;
+    top: 60%;
+    margin-top: -12px;
+    content: ' ';
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 14.4px 7.5px 0 7.5px;
+    border-color: #ffffff transparent transparent transparent;
+    pointer-events: none;
+}
+
+.genre_head {
+    height: 75px;
+    width: 337px;
+    text-align: center;
+    padding-left: 15px;
+    color: white;
+    text-decoration:none;
+}
+
+.genre_head a {
+    color: white;
+    text-decoration:none;
+}
+
+
+.plus_head {
+    width: 136px;
+}
+
+.tbody a {
+    color: white;
+    text-decoration:none;
+}
+
+.time{
+    width: 225px;
+    word-wrap:break-word;
+    vertical-align: 0%;
+    height: 76px;
+}
+
+.stuff {
+    padding-left: 72px;
+    text-align: left;
+    width: 337px;
+    vertical-align: 0%;
+    word-wrap:break-word;
+}
+
+.plus {
+    padding-left: 0px;
+    padding-top: 6px;
+    padding-right: 1px;
+}
+
+.genre {
+    width: 337px;
+    text-align: left;
+    padding-left: 15px;
+    vertical-align: 0%;
+    word-wrap:break-word;
+}
+
+.tbody tr:nth-child(odd){
+    font-size: 22px;
+    font-weight: 400;
+    color: #fff;
+    background: #373737;
+}
+
+.tbody tr:nth-child(even){
+    font-size: 22px;
+    font-weight: 400;
+    color: #fff;
+    background: #4b4d4f;
+
+}
+
+.tbody tr:nth-child(3n+3) {
+    font-size: 22px;
+    font-weight: 400;
+    color: #fff;
+    background: #6c6c6c;
+
 }
 
 .present {
