--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,435 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap&subset=cyrillic,cyrillic-ext');
-* {
-    padding: 0;
+/* Reset CSS*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+    vertical-align: baseline;  
+}
+
+/* make sure to set some focus styles for accessibility */
+:focus {
+    outline: 0;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+body {
+    font-family: 'Roboto';
+    line-height: 1.2;
+}
+
+ol, ul {
+	list-style: none;
+}
+
+blockquote, q {
+	quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+input[type=search]::-webkit-search-cancel-button,
+input[type=search]::-webkit-search-decoration,
+input[type=search]::-webkit-search-results-button,
+input[type=search]::-webkit-search-results-decoration {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+input[type=search] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
+
+textarea {
+    overflow: auto;
+    vertical-align: top;
+    resize: vertical;
+}
+
+/**
+ * Correct `inline-block` display not defined in IE 6/7/8/9 and Firefox 3.
+ */
+
+audio,
+canvas,
+video {
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    max-width: 100%;
+}
+
+/**
+ * Prevent modern browsers from displaying `audio` without controls.
+ * Remove excess height in iOS 5 devices.
+ */
+
+audio:not([controls]) {
+    display: none;
+    height: 0;
+}
+
+/**
+ * Address styling not present in IE 7/8/9, Firefox 3, and Safari 4.
+ * Known issue: no IE 6 support.
+ */
+
+[hidden] {
+    display: none;
+}
+
+/**
+ * 1. Correct text resizing oddly in IE 6/7 when body `font-size` is set using
+ *    `em` units.
+ * 2. Prevent iOS text size adjust after orientation change, without disabling
+ *    user zoom.
+ */
+
+html {
+    font-size: 100%; /* 1 */
+    -webkit-text-size-adjust: 100%; /* 2 */
+    -ms-text-size-adjust: 100%; /* 2 */
+}
+
+/**
+ * Address `outline` inconsistency between Chrome and other browsers.
+ */
+
+a:focus {
+    outline: thin dotted;
+}
+
+/**
+ * Improve readability when focused and also mouse hovered in all browsers.
+ */
+
+a:active,
+a:hover {
+    outline: 0;
+}
+
+/**
+ * 1. Remove border when inside `a` element in IE 6/7/8/9 and Firefox 3.
+ * 2. Improve image quality when scaled in IE 7.
+ */
+
+img {
+    border: 0; /* 1 */
+    -ms-interpolation-mode: bicubic; /* 2 */
+}
+
+/**
+ * Address margin not present in IE 6/7/8/9, Safari 5, and Opera 11.
+ */
+
+figure {
     margin: 0;
+}
+
+/**
+ * Correct margin displayed oddly in IE 6/7.
+ */
+
+form {
+    margin: 0;
+}
+
+/**
+ * Define consistent border, margin, and padding.
+ */
+
+fieldset {
+    border: 1px solid #c0c0c0;
+    margin: 0 2px;
+    padding: 0.35em 0.625em 0.75em;
+}
+
+/**
+ * 1. Correct color not being inherited in IE 6/7/8/9.
+ * 2. Correct text not wrapping in Firefox 3.
+ * 3. Correct alignment displayed oddly in IE 6/7.
+ */
+
+legend {
+    border: 0; /* 1 */
+    padding: 0;
+    white-space: normal; /* 2 */
+    *margin-left: -7px; /* 3 */
+}
+
+/**
+ * 1. Correct font size not being inherited in all browsers.
+ * 2. Address margins set differently in IE 6/7, Firefox 3+, Safari 5,
+ *    and Chrome.
+ * 3. Improve appearance and consistency in all browsers.
+ */
+
+button,
+input,
+select,
+textarea {
+    font-size: 100%; /* 1 */
+    margin: 0; /* 2 */
+    vertical-align: baseline; /* 3 */
+    *vertical-align: middle; /* 3 */
+}
+
+/**
+ * Address Firefox 3+ setting `line-height` on `input` using `!important` in
+ * the UA stylesheet.
+ */
+
+button,
+input {
+    line-height: normal;
+}
+
+/**
+ * Address inconsistent `text-transform` inheritance for `button` and `select`.
+ * All other form control elements do not inherit `text-transform` values.
+ * Correct `button` style inheritance in Chrome, Safari 5+, and IE 6+.
+ * Correct `select` style inheritance in Firefox 4+ and Opera.
+ */
+
+button,
+select {
+    text-transform: none;
+}
+
+/**
+ * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
+ *    and `video` controls.
+ * 2. Correct inability to style clickable `input` types in iOS.
+ * 3. Improve usability and consistency of cursor style between image-type
+ *    `input` and others.
+ * 4. Remove inner spacing in IE 7 without affecting normal text inputs.
+ *    Known issue: inner spacing remains in IE 6.
+ */
+
+button,
+html input[type="button"], /* 1 */
+input[type="reset"],
+input[type="submit"] {
+    -webkit-appearance: button; /* 2 */
+    cursor: pointer; /* 3 */
+    *overflow: visible;  /* 4 */
+}
+
+/**
+ * Re-set default cursor for disabled elements.
+ */
+
+button[disabled],
+html input[disabled] {
+    cursor: default;
+}
+
+/**
+ * 1. Address box sizing set to content-box in IE 8/9.
+ * 2. Remove excess padding in IE 8/9.
+ * 3. Remove excess padding in IE 7.
+ *    Known issue: excess padding remains in IE 6.
+ */
+
+input[type="checkbox"],
+input[type="radio"] {
+    box-sizing: border-box; /* 1 */
+    padding: 0; /* 2 */
+    *height: 13px; /* 3 */
+    *width: 13px; /* 3 */
+}
+
+/**
+ * 1. Address `appearance` set to `searchfield` in Safari 5 and Chrome.
+ * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
+ *    (include `-moz` to future-proof).
+ */
+
+input[type="search"] {
+    -webkit-appearance: textfield; /* 1 */
+    -moz-box-sizing: content-box;
+    -webkit-box-sizing: content-box; /* 2 */
+    box-sizing: content-box;
+}
+
+/**
+ * Remove inner padding and search cancel button in Safari 5 and Chrome
+ * on OS X.
+ */
+
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+    -webkit-appearance: none;
+}
+
+/**
+ * Remove inner padding and border in Firefox 3+.
+ */
+
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+    border: 0;
+    padding: 0;
+}
+
+/**
+ * 1. Remove default vertical scrollbar in IE 6/7/8/9.
+ * 2. Improve readability and alignment in all browsers.
+ */
+
+textarea {
+    overflow: auto; /* 1 */
+    vertical-align: top; /* 2 */
+}
+
+/**
+ * Remove most spacing between table cells.
+ */
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+html,
+button,
+input,
+select,
+textarea {
+    color: #222;
+}
+
+
+::-moz-selection {
+    background: #b3d4fc;
+    text-shadow: none;
+}
+
+::selection {
+    background: #b3d4fc;
+    text-shadow: none;
+}
+
+img {
+    vertical-align: middle;
+}
+
+fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
+textarea {
+    resize: vertical;
+}
+
+.chromeframe {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
+/* \Reset CSS*/
+
+@font-face {
+    font-family: 'Roboto';
+    font-display: swap;
+    src: url(../fonts/Roboto-Black.ttf) format("truetype");
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    font-display: swap;
+    src: url(../fonts/Roboto-Bold.ttf) format("truetype");
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    font-display: swap;
+    src: url(../fonts/Roboto-Regular.ttf) format("truetype");
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    font-display: swap;
+    src: url(../fonts/Roboto-Light.ttf) format("truetype");
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    font-display: swap;
+    src: url(../fonts/Roboto-Thin.ttf) format('truetype');
+    font-weight: 100;
+    font-style: normal;
+}
+
+* {
     box-sizing: border-box;
 }
-body, p, h1, h2, h3, h4, h5, h6 {
-    background: transparent;
-    outline: 0;
-    padding: 0;
-    text-decoration: none;
-    font-family: 'Roboto', sans-serif;
+
+h1 {
+    font-weight: 100;
+    font-size: 93px;
+}
+
+h2 {
+    font-weight: 700;
+    font-size: 50px;
+}
+
+h3 {
+    font-weight: 900;
+    font-size: 35px;
+}
+
+a{ 
+    color: white;
+    text-decoration:none;      
+}
+
+p {
+    font-weight: 300;
+    font-size: 14px;
 }
 
 .main {
@@ -18,113 +438,109 @@ body, p, h1, h2, h3, h4, h5, h6 {
     height: 769px;
 }
 
-.logo {
-  /*  border: solid 1px green; */
-    margin-left: 168px;
-    padding-top: 52px;
-    float: left;
+.main__logo {
+    background-image: url("../images/logo.png");
+    position: absolute;
+    left: 12%;
+    top: 54px;
+    width: 188px;
+    height: 45px;
 }
 
-.clearfix:before,
-.clearfix:after {
+.main__menu:before,
+.main__menu:after {
   content: "";
   display: table;
 }
-.clearfix:after {
+.main__menu:after {
     clear: both;
   }
 
-.nav {
+.main__menu-list {
  /*   border: solid 1px greenyellow; */
-    margin-left: 258px;
+    margin-left: 45%;
     padding-top: 70px;
-    float: left;
 }
 
-
-
-.nav li {
+.main__menu-list li {
   /*  border: solid 1px blueviolet; */
     float: left;
     margin-right: 38px;
     list-style-type: none;
+    font-size: 15px;
     
 }
 
-.nav li a{
-    color: white;
-    text-decoration:none;
-}
-
-.whitetext {
+.main__head {
     color: white;
     padding-top: 185px;
     text-align: center;
 }
 
-.whitetext h1 {
-    font-weight: 100;
-    font-size: 60pt;
+.main__head h2 {
+    font-weight: 400;
 }
 
-.whitetext h2 {
-    font-size: 50pt;
+.main__welcome {
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 1px 2px 0px rgba(35, 31, 32, 0.65);
+    position: absolute;
+    left: 50%;
+    top: 639px;
+    width: 516px;
+    height: 267px;  
+    padding: 32px 38px;
 }
 
-.welcome {
-    width: 485px;
-    height: 230px;
-    background: url("../images/Base.jpg");
-    margin-left: 685px;
-    margin-top: 240px;
-    padding-left: 35px;
-    padding-top: 40px;
+.main__welcome h2 {
+    font-size: 40px;
+    padding-bottom: 15px;
 }
 
-.welcome h2 {
-    font-size: 40pt;
-    font-weight: bold;
+.main__welcome p {
+    padding-top: 17px;
+    width: 396px;
 }
-.why_us::after { 
+
+.advantages::after { 
     content: "";
     clear: both; 
     display: block; 
   }
 
-.what {
-    margin-left: 173px;
-    font-size: 50pt;
-    font-weight: bold;
+.advantages__head {
+    margin: 83px 0 0 173px;
 }
 
-.icon_1 {
+.advantages__first {
     margin-top: 135px;
     float: left;
-    margin-left: 15%;
-    width: 15%;
+    margin-left: 10%;
+    width: 283px;
+    
     
 }
 
-.icon_2 {
+.advantages__second {
     margin-top: 135px;
     float: left;
-    margin-left: 15%;
-    width: 15%;
+    margin-left: 10%;
+    width: 283px;
 }
 
-.icon_3 {
+.advantages__third {
     margin-top: 135px;
     float: left;
-    margin-left: 15%;
+    margin-left: 10%;
     margin-right: 10%;
-    width: 15%;
+    width: 283px;
 }
 
-.movie-list {
+.movie {
     text-align: center;
 }
 
-.movie-list__header {
+.movie__header {
     font-size: 50px;
     color: #252525;
     font-weight: 700;
@@ -132,7 +548,7 @@ body, p, h1, h2, h3, h4, h5, h6 {
     text-align: center;
 }
 
-.movie-list__table {
+.movie__table {
     width: 1030px;
     border-collapse: collapse;
     border-radius: 15px;
@@ -141,7 +557,7 @@ body, p, h1, h2, h3, h4, h5, h6 {
     margin: 0 auto;
 }
 
-.movie-list__thead {
+.movie__table__thead {
     font-size: 30px;
     font-weight: 700;
     color: #fff;
@@ -149,19 +565,19 @@ body, p, h1, h2, h3, h4, h5, h6 {
 
 }
 
-.time_head {
+.movie__table__thead-time {
     width: 225px;
     text-align: center;
     height: 75px;
     position: relative;
 }
 
-.time_head a {
+.movie__table__thead-time a {
     color: white;
     text-decoration:none;
 }
 
-.time_head:before {
+.movie__table__thead-time:before {
     position: absolute;
     left: 99%;
     top: 60%;
@@ -173,7 +589,7 @@ body, p, h1, h2, h3, h4, h5, h6 {
     border-width: 0 7.5px 14.4px 7.5px;
     border-color: transparent transparent #ffffff transparent;
 }
-.stuff_head {
+.movie__table__thead-stuff {
     padding-left: 65px;
     text-align: center;
     width: 337px;
@@ -183,12 +599,12 @@ body, p, h1, h2, h3, h4, h5, h6 {
     text-decoration:none;
 }
 
-.stuff_head a {
+.movie__table__thead-stuff a {
     color: white;
     text-decoration:none;
 }
 
-.stuff_head:before {
+.movie__table__thead-stuff:before {
     position: absolute;
     left: 98%;
     top: 60%;
@@ -202,7 +618,7 @@ body, p, h1, h2, h3, h4, h5, h6 {
     pointer-events: none;
 }
 
-.genre_head {
+.movie__table__thead-genre {
     height: 75px;
     width: 337px;
     text-align: center;
@@ -211,29 +627,29 @@ body, p, h1, h2, h3, h4, h5, h6 {
     text-decoration:none;
 }
 
-.genre_head a {
+.movie__table__thead-genre a {
     color: white;
     text-decoration:none;
 }
 
 
-.plus_head {
+.movie__table__thead-plus {
     width: 136px;
 }
 
-.tbody a {
+.movie__table__tbody a {
     color: white;
     text-decoration:none;
 }
 
-.time{
+.movie__table__tbody-time{
     width: 225px;
     word-wrap:break-word;
     vertical-align: 0%;
     height: 76px;
 }
 
-.stuff {
+.movie__table__tbody-stuff {
     padding-left: 72px;
     text-align: left;
     width: 337px;
@@ -241,13 +657,7 @@ body, p, h1, h2, h3, h4, h5, h6 {
     word-wrap:break-word;
 }
 
-.plus {
-    padding-left: 0px;
-    padding-top: 6px;
-    padding-right: 1px;
-}
-
-.genre {
+.movie__table__tbody-genre {
     width: 337px;
     text-align: left;
     padding-left: 15px;
@@ -255,14 +665,20 @@ body, p, h1, h2, h3, h4, h5, h6 {
     word-wrap:break-word;
 }
 
-.tbody tr:nth-child(odd){
+.movie__table__tbody-plus {
+    padding-left: 0px;
+    padding-top: 6px;
+    padding-right: 1px;
+}
+
+.movie__table__tbody tr:nth-child(odd){
     font-size: 22px;
     font-weight: 400;
     color: #fff;
     background: #373737;
 }
 
-.tbody tr:nth-child(even){
+.movie__table__tbody tr:nth-child(even){
     font-size: 22px;
     font-weight: 400;
     color: #fff;
@@ -270,7 +686,7 @@ body, p, h1, h2, h3, h4, h5, h6 {
 
 }
 
-.tbody tr:nth-child(3n+3) {
+.movie__table__tbody tr:nth-child(3n+3) {
     font-size: 22px;
     font-weight: 400;
     color: #fff;
@@ -285,19 +701,6 @@ body, p, h1, h2, h3, h4, h5, h6 {
     height: 750px;
 }
 
-.logo2 {
-    margin-left: 12.5%;
-    float: left;
-    overflow: hidden;
-}
-
-.presentall {
-    height: 535px;
-    width: 100%;
-    padding: 5px 12% 0 39%;
-
-}
-
 .present h2 {
     padding-top: 150px;
     text-align: center;
@@ -308,6 +711,18 @@ body, p, h1, h2, h3, h4, h5, h6 {
 .present p {
     text-align: right;
     color: white;
+}
+
+.present__logo {
+    margin-left: 12.5%;
+    float: left;
+    overflow: hidden;
+}
+
+.present_each {
+    height: 535px;
+    width: 100%;
+    padding: 5px 12% 0 39%;
 }
 
 .getpresent {
