--- a/css/style.css
+++ b/css/style.css
@@ -441,7 +441,7 @@ body {
 h1 {
     font-weight: 100;
     font-size: 4rem;
-    padding-left: 13.35rem;
+    text-align: center;
 }
 
 h2 {
@@ -478,12 +478,18 @@ p {
     position: relative;
 }
 
+.block {
+    max-width: 53rem;
+    margin: 0 auto;
+}
+
 .main:after {
     content: "";
     position: absolute;
     bottom: 0;
     left: 0;
-    border-left: 100vw solid transparent;
+    right: 0;
+    border-left: 98vw solid transparent;
     border-bottom: 5.55rem solid #fff;
 }
 
@@ -507,13 +513,13 @@ p {
 
 .main__menu-list {
  /*   border: solid 1px greenyellow; */
-    margin-left: 30.6rem;
+    margin-left: 23.2rem;
     padding-top: 3.4rem;
 }
 
 .main__menu-list li {
   /*  border: solid 1px blueviolet; */
-    float: left;
+    display: inline-block;
     margin-right: 1.9rem;
     list-style-type: none;
     font-size: .75rem;
@@ -531,19 +537,26 @@ p {
 
 .main__head h2 {
     font-weight: 400;
-    padding-left: 17.55rem;
+    text-align: center;
     letter-spacing: .14rem;
+}
+
+
+.container {
+    width: 50.7rem;
+    position: relative;
+    margin: 0 auto;
 }
 
 .main__welcome {
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 1px 2px 0px rgba(35, 31, 32, 0.65);
     position: absolute;
-    left: 33.9rem;
-    top: 31.3rem;
+    top: -9.9rem;
     width: 25.3rem;
     padding: 1.5rem 4.3rem 2.05rem 1.6rem;
     z-index: 1;
+    right: 0;
 }
 .main__welcome h2 {
     font-size: 2rem;
@@ -555,10 +568,7 @@ p {
 }
 
 
-.container {
-    width: 51.5rem;
-    margin-left: 8.5rem;
-}
+
 
 .advantages__flex {   
     flex-direction: row;
@@ -785,6 +795,7 @@ p {
 .present_each {
     width: 100%;
     padding: .15rem 8.2rem 0 26.5rem;
+    text-align: right;
 }
 
 .present h2 {
@@ -797,7 +808,6 @@ p {
 }
 
 .present p {
-    text-align: right;
     color: white;
     padding-bottom: .85rem;
     padding-right: .15rem;
@@ -821,8 +831,9 @@ p {
 .present__button {
     width: 10.75rem;
     background: url(../images/button.png)no-repeat top center /cover;
-    margin: 0.9rem 0 0 21.9rem;
+    margin: 0.9rem 0 0 0;
     height: auto;
+    display: inline-block;
 }
 
 .present__button p {
@@ -915,11 +926,12 @@ p {
 
 .relations {
     background: url("../images/backgroundlast.png");
+    text-align: center;
     
 }
 
 .relations_icons {
-    padding: 3.05rem 0 0 26.6rem;
+    padding: 3.05rem 0;
 }
 
 .relations_icons svg{
@@ -929,8 +941,7 @@ p {
 }
 
 .relations__text {
-    width: 18.9rem;
-    margin-left: 24.75rem;
+
 }
 .relations__text p {
     padding-top: 1.3rem;
