--- a/css/main.css
+++ b/css/main.css
@@ -439,4 +439,15 @@ a{
     color: white;
     padding: 266px auto;
 }
+
+#modalPresent {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #000;
+    opacity: .7;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
   
