--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,8 @@
 @media screen and (max-width:1200px){
+    .owl-stage{
+        width: 200rem;
+    }
+    
     p {
         font-size: .9rem;
     }
